# fdc-logger-toolkit

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  tasks.ps1
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: chart-threshold-change.yml
.github/workflows/: ci.yml
docs/: architecture.md  chart-governance-playbook.md  coderabbit-pr135-findings.md  dashboard-architecture-playbook.md  db-api-endpoints.md  db-api-minimum-contract.md  decision-log.md
docs/issues/: child-dashboard-read-only-baseline.md  child-get-charts-active.md  child-get-charts-history.md  child-get-charts.md  child-get-judge-result-by-id.md  child-get-judge-results.md  child-judge-mvp.md  parent-db-api-minimum-contract-phase1.md
scripts/: run_import_linter.py
src/portfolio_fdc/configs/: aggregate_tools.yaml  charts_seed.yaml  recipe_rules.yaml  recipe_rules_dummy.yaml  segmentation.yaml  sensor_map.csv
src/portfolio_fdc/core/: config.py  sensor_map.py
src/portfolio_fdc/core/segmentation/: aligner.py  classifier.py  features.py  models.py  peak_detector.py  queue.py  splitter.py
src/portfolio_fdc/dashboard/: api_client.py  app.py  base_url.py  controller.py  dependencies.py  tab_renderers.py  view_models.py
src/portfolio_fdc/dashboard/assets/: dashboard.css
src/portfolio_fdc/dashboard/services/: __init__.py  active_drilldown.py  chart_name_options.py  navigation.py  tab_load.py  url_filters.py
src/portfolio_fdc/db_api/: _schemas_backup_non_aggregate.py  aggregate_repository.py  app.py  chart_repository.py  datetime_util.py  db.py  judge_repository.py  schemas.py  schemas_backup_non_aggregate.py  task_runner.py
src/portfolio_fdc/main/: aggregate.py  scrape.py
src/portfolio_fdc/tools/sim_data_generator/: anomaly.py  generate_logger_csv.py
tests/: conftest.py  test_aggregate.py  test_aggregate_db_api_integration.py  test_aggregate_recipe_path_config.py  test_aggregate_repository.py  test_charts_seed.py  test_dashboard_api_client.py  test_dashboard_app.py  test_dashboard_view_models.py  test_db_api_active_charts_endpoint.py  test_db_api_charts_endpoint.py  test_db_api_charts_history_endpoint.py  test_db_api_db_path_config.py  test_db_api_integration.py  test_db_api_judge_results_endpoint.py  test_db_api_lifespan.py  test_db_api_schemas.py  test_generate_logger_csv.py  test_generate_scrape_integration.py  test_judge_results_edge_cases.py  test_scrape.py  test_smoke.py  test_tab_renderers.py  test_task_runner.py  test_utils.py
tests/aggregate/: test_aggregate.py  test_aggregate_repository.py  test_charts_seed.py
tests/dashboard/: test_controller.py  test_dashboard_api_client.py  test_dashboard_app.py  test_dashboard_view_models.py  test_services.py
tests/db_api/: test_db_api_active_charts_endpoint.py  test_db_api_chart_points_waveform_endpoint.py  test_db_api_charts_endpoint.py  test_db_api_charts_history_endpoint.py  test_db_api_db_path_config.py  test_db_api_lifespan.py
tests/integration/: test_dashboard_callbacks_integration.py  test_db_api_integration.py
tests/judge/: test_db_api_judge_results_endpoint.py  test_judge_results_edge_cases.py
