[project]
name = "portfolio-fdc"
version = "0.1.0"
description = "Portfolio-friendly FDC toolkit (logger stream → segmentation → features → SPC dashboard)"
readme = "README.md"
requires-python = ">=3.11"
# Runtime requirement: SQLite >= 3.38 is required.
# chart_repository.py uses datetime(h.changed_at) comparisons that rely on
# SQLite's ISO 8601 datetime parsing, which was stabilised in 3.38 (2022-02-22).
# _normalize_query_datetime (db_api/app.py) normalises all query timestamps to
# UTC ISO 8601 before they reach these comparisons; SQLite < 3.38 may parse
# those strings incorrectly and silently produce wrong filter results.
dependencies = [
  "fastapi>=0.115",
  "numpy>=2.4.2",
  "pandas>=3.0.1",
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "requests>=2.32.5",
  "uvicorn>=0.32"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "import-linter>=2.3",
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-PyYAML>=6.0.12",
  "types-requests>=2.32.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: end-to-end style tests combining generators and scraper",
  "slow: heavy tests that generate large files or run longer",
]

[tool.importlinter]
root_packages = ["portfolio_fdc"]

[[tool.importlinter.contracts]]
name = "dashboard must not import judge"
type = "forbidden"
source_modules = ["portfolio_fdc.dashboard"]
forbidden_modules = ["portfolio_fdc.judge"]

[[tool.importlinter.contracts]]
name = "judge must not import dashboard"
type = "forbidden"
source_modules = ["portfolio_fdc.judge"]
forbidden_modules = ["portfolio_fdc.dashboard"]

[[tool.importlinter.contracts]]
name = "main ingest must not import dashboard or judge"
type = "forbidden"
source_modules = ["portfolio_fdc.main"]
forbidden_modules = ["portfolio_fdc.dashboard", "portfolio_fdc.judge"]

[tool.setuptools.packages.find]
where = ["src"]
